--- a/frontend/src/styles/AuthForm.css
+++ b/frontend/src/styles/AuthForm.css
@@ -8,7 +8,7 @@ form {
 
 h1 {
   text-align: center;
-  margin-bottom: 40px;
+  margin-top: 40px;
 }
 
 .input-field {
@@ -17,7 +17,7 @@ h1 {
 
 .input-field label {
   display: block;
-  color: #6B7280;
+  color: #6b7280;
   margin-bottom: 10px;
 }
 
@@ -30,14 +30,37 @@ h1 {
   flex-direction: row;
   justify-content: space-between;
   font-size: 14px;
-  color: #6B7280;
+  color: #6b7280;
 }
 
 .footer a {
-  color: #5048E5;
+  color: #5048e5;
   font-weight: 500;
 }
 
 .role-switch {
-  color: #6B7280;
+  color: #6b7280;
+}
+
+.update-form p {
+  text-align: center;
+  color: #6b7280;
+  padding-bottom: 10px;
+}
+
+.recovery-link {
+  display: flex; 
+  flex-direction: column; 
+  justify-content: center; 
+  align-items: center; 
+  text-align: center;
+  height: 530px;
+  width: 600px;
+  margin: 0 auto;
+}
+
+.recovery-link p {
+  font-size: 16px;
+  font-weight: 600;
+  padding: 0 50px;
 }
