--- a/frontend/src/styles/AuthForm.css
+++ b/frontend/src/styles/AuthForm.css
@@ -1,4 +1,4 @@
-form {
+.auth-form {
   max-width: 600px;
   border: 1px solid white;
   border-radius: 10px;
@@ -6,26 +6,26 @@ form {
   padding: 20px 50px 80px 50px;
 }
 
-h1 {
+.auth-form h1 {
   text-align: center;
   margin-top: 40px;
 }
 
-.input-field {
+.auth-form .input-field {
   margin: 20px 0 20px 0;
 }
 
-.input-field label {
+.auth-form .input-field label {
   display: block;
   color: #6b7280;
   margin-bottom: 10px;
 }
 
-.submit-btn {
+.auth-form .submit-btn {
   margin: 30px 0;
 }
 
-.footer {
+.auth-form .footer {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -33,16 +33,16 @@ h1 {
   color: #6b7280;
 }
 
-.footer a {
+.auth-form .footer a {
   color: #5048e5;
   font-weight: 500;
 }
 
-.role-switch {
+.auth-form .role-switch {
   color: #6b7280;
 }
 
-.update-form p {
+#recovery-text {
   text-align: center;
   color: #6b7280;
   padding-bottom: 10px;
