--- a/frontend/src/styles/AuthForm.css
+++ b/frontend/src/styles/AuthForm.css
@@ -1,5 +1,5 @@
 .auth-form {
-  max-width: 600px;
+  width: 450px;
   border: 1px solid white;
   border-radius: 10px;
   box-shadow: 0 5px 16px 1px rgba(229, 229, 229, 0.8);
