--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,3 +3,14 @@ h1 {
   font-weight: 700;
   font-size: 32px;
 }
+
+.error-page {
+  width: 1300px;
+  height: 600px;
+  margin: 50px auto;
+  background-color: white;
+  display: flex; 
+  align-items: center; 
+  justify-content: center;
+  flex-direction: column;
+}
